--- a/src/main/webapp/resources/dev/tpl/config/config.jenkins.html
+++ b/src/main/webapp/resources/dev/tpl/config/config.jenkins.html
@@ -5,7 +5,7 @@
             <div class="col-lg-4 col-md-4 col-sm-4">
                 <span class="current-module">
                     <i class="fa fa-home"></i>
-                    <a ui-sref="builds.trunk({module: githubCtrl.currentModule})">
+                    <a ui-sref="builds.trunk({module: jenkinsCtrl.currentModule})">
                         <span>
                             {{::jenkinsCtrl.username}}&nbsp;&nbsp;<i class="fa fa-angle-right"></i>&nbsp;&nbsp;
                         </span>
