后端参数校验 + 历史文件修改

--- a/src/main/webapp/resources/dev/tpl/pipeline/pipeline.html
+++ b/src/main/webapp/resources/dev/tpl/pipeline/pipeline.html
@@ -24,7 +24,7 @@
                 </span>
                 </div>
                 <div class="col-md-5 text-float-right">
-                    <a class="module-settings-link" ng-click="buildPipeline()">
+                    <a ng-click="buildPipeline()" class="module-settings-link">
                         <span class="fa fa-hand-rock-o"></span> 执行构建
                     </a>
                     <a ui-sref="release({module: buildsCtrl.context.module})" class="module-settings-link">
