--- a/src/main/webapp/resources/dev/tpl/config/config.pipeline.html
+++ b/src/main/webapp/resources/dev/tpl/config/config.pipeline.html
@@ -98,7 +98,7 @@
             <br/>
             <div class="form-group params-group">
                 <label>构建参数</label>
-                <a href="http://wiki.baidu.com/pages/viewpage.action?pageId=158562481" target="_blank"
+                <a href="https://github.com/z521598/pipeline/wiki/Pipeline%E7%B3%BB%E7%BB%9F%E5%8F%82%E6%95%B0%E5%88%97%E8%A1%A8" target="_blank"
                    class="tooltip-top" tooltip-data="传入 Job 的自定义参数">
                     <i class="fa fa-question-circle"></i>
                 </a>
