发布记录，pipeline配置，链接优化

--- a/src/main/webapp/resources/dev/tpl/config/config.pipeline.html
+++ b/src/main/webapp/resources/dev/tpl/config/config.pipeline.html
@@ -83,8 +83,7 @@
             任务类型：<label ng-bind="activeJobPluginInfo.name"></label><br/>
             说明：<label ng-bind="activeJobPluginInfo.description"></label>
             <br/>
-            参考文档：<label ng-bind="activeJobPluginInfo.link"></label>
-            <a ng-href="link" target="_blank" ng-show="loaded">点击查看</a>
+            参考文档：<a ng-href="{{activeJobPluginInfo.link}}" target="_blank">点击查看</a>
         </div>
         <div id="taskConfigDiv" class="form-group">
             <app-real-job-config
