--- a/src/main/webapp/resources/dev/tpl/pipeline/release.history.html
+++ b/src/main/webapp/resources/dev/tpl/pipeline/release.history.html
@@ -46,7 +46,7 @@
                 <!--TODO-->
                 <td>
                     <span>
-                        <a ng-href="{{::release.releasePath}}">产出下载</a>
+                        <a href="javascript:void(0)" ng-click="releaseHisCtrl.alertInfo(release.releaseProductWgetCommand)">点击查看</a>
                     </span>
                 </td>
             </tr>
