--- a/src/main/webapp/resources/dev/tpl/config/config.pipeline.html
+++ b/src/main/webapp/resources/dev/tpl/config/config.pipeline.html
@@ -97,7 +97,8 @@
             <br/>
             <div class="form-group params-group">
                 <label>构建参数</label>
-                <a href="https://github.com/z521598/pipeline/wiki/Pipeline%E7%B3%BB%E7%BB%9F%E5%8F%82%E6%95%B0%E5%88%97%E8%A1%A8" target="_blank"
+                <a href="https://github.com/z521598/pipeline/wiki/Pipeline%E7%B3%BB%E7%BB%9F%E5%8F%82%E6%95%B0%E5%88%97%E8%A1%A8"
+                   target="_blank"
                    class="tooltip-top" tooltip-data="传入 Job 的自定义参数">
                     <i class="fa fa-question-circle"></i>
                 </a>
@@ -130,15 +131,17 @@
                 </ul>
             </div>
         </div>
-        <div class="form-group operation-button-group">
-            <button type="button" class="agile button ok-button" ng-click="configCtrl.submit()"
-                    ng-disabled="saving">
-                保存
-            </button>
-            <button type="button" ng-click="cancel()" class="agile button cancel-button">取消</button>
-        <span class="agile left pointing blue basic label save-done-label" style="color:darkred" ng-if="saved">
+    </div>
+    <div class="form-group operation-button-group">
+        <button type="button" class="agile button ok-button" ng-click="configCtrl.submit()"
+                ng-disabled="saving">
+            保存
+        </button>
+        <button type="button" ng-click="cancel()" class="agile button cancel-button">取消</button>
+        <span class="agile left pointing blue basic label save-done-label" style="color:red" ng-if="saveFailed" ng-bind="message">
+        </span>
+            <span class="agile left pointing blue basic label save-done-label" style="color:darkred" ng-if="saved">
             配置已保存,重新构建或者提交代码将应用最新配置!
         </span>
-        </div>
     </div>
 </div>
