--- a/src/main/webapp/resources/dev/tpl/directive/pipeline-build.html
+++ b/src/main/webapp/resources/dev/tpl/directive/pipeline-build.html
@@ -186,6 +186,12 @@
                         <i class="fa fa-caret-right icon"></i>&nbsp;
                         重新执行
                     </button>
+                    <button type="button" class="btn btn-danger"
+                            ng-if="jobBuildInfo.jobStatus == 'RUNNING'"
+                            ng-click="tool.cancel(jobBuildInfo)" style="color:darkred">
+                        <i class="fa fa-caret-right icon"></i>&nbsp;
+                        取消
+                    </button>
                     <div class="pull-right">
                         <a href="javascript:void(0)"
                            ng-click="showBuildParam(jobBuildInfo)"
